# cmake_playground

./: README.md
check_test_existence/: CMakeLists.txt  README.md
check_test_existence/subdir/: CMakeLists.txt
cmake-gui_cache_variables/: CMakeLists.txt  CMakePresets.json  README.md  toplevel_include.cmake
cmake_323_qnx_response_files/: CMakeLists.txt  CMakePresets.json  README.md  lowlevel.sh  main.c
cmake_323_qnx_response_files/cmake/: qcc5_qnx7_x86_64.cmake  qcc8_qnx710_x86_64.cmake
cmake_323_qnx_response_files/lib/: CMakeLists.txt  lib.c.in  lib.h.in
cmake_minimum_required_side_effects/: README.md
cmake_minimum_required_side_effects/find_package_config/: CMakeLists.txt  build_and_install_MyPkg.cmake
cmake_minimum_required_side_effects/find_package_config/MyPkg/: CMakeLists.txt  Package.cmake.in
cmake_minimum_required_side_effects/find_package_config/MyPkg/include/: MyPkg_getint.h
cmake_minimum_required_side_effects/find_package_module/: CMakeLists.txt
cmake_minimum_required_side_effects/find_package_module/CMake/: FindMyPkg.cmake
cmake_minimum_required_side_effects/find_package_provider/: CMakeLists.txt  simple_provider.cmake
cmake_minimum_required_side_effects/find_package_provider/MyPkg/: CMakeLists.txt
cmake_minimum_required_side_effects/toolchain_file/: CMakeLists.txt  gcc.cmake
empty_file_strings/: README.md  test.cmake
parametrized_gtests/: CMakeLists.txt  README.md  testsuite.cpp
parent_directory/: README.md  parent_directory.cmake
version_range/: CMakeLists.txt  README.md  range.cmake  range.js
version_range/cmake/: FindDummy200.cmake  FindDummy210.cmake
vscode_cmake_tools_test_build/: CMakeLists.txt  CMakePresets.json  README.md  main.c
